[gd_scene load_steps=10 format=3 uid="uid://cjcvj2iq3844v"]

[ext_resource type="Script" path="res://objects/VFX/cannon_shoot/cannon_shoot.gd" id="1_p8e8x"]
[ext_resource type="Texture2D" uid="uid://ukxm7akriypo" path="res://assets/textures/cannon.png" id="2_s80np"]
[ext_resource type="Texture2D" uid="uid://cvx8tblwa0wnh" path="res://assets/textures/cannonball_16x16.png" id="3_6r4tx"]
[ext_resource type="Texture2D" uid="uid://bmi05uwgklewy" path="res://assets/textures/bomb_explosion.png" id="3_uho1d"]
[ext_resource type="AudioStream" uid="uid://b6yaw76r5re2y" path="res://assets/sfx/cannon_sfx.ogg" id="5_26nth"]

[sub_resource type="Animation" id="Animation_3bvqf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4l6qg"]
resource_name = "shoot"
length = 0.500002
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.297201, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.45826, 1.45826), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.166667, 0.216667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.133333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"blast"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1o17l"]
_data = {
"RESET": SubResource("Animation_3bvqf"),
"shoot": SubResource("Animation_4l6qg")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0pda3"]
particles_animation = true
particles_anim_h_frames = 16
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="CannonShoot" type="Node2D"]
position = Vector2(79, 68)
script = ExtResource("1_p8e8x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Cannon")
autoplay = "shoot"
libraries = {
"": SubResource("AnimationLibrary_1o17l")
}

[node name="Cannon" type="Sprite2D" parent="."]
texture = ExtResource("2_s80np")

[node name="Ball" type="Sprite2D" parent="."]
z_index = 10
texture = ExtResource("3_6r4tx")

[node name="BlastFX" type="CPUParticles2D" parent="."]
z_index = -1
material = SubResource("CanvasItemMaterial_0pda3")
position = Vector2(10, -10)
emitting = false
amount = 4
lifetime = 0.1
one_shot = true
explosiveness = 0.2
texture = ExtResource("3_uho1d")
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector2(1, -1)
spread = 40.0
gravity = Vector2(0, 0)
initial_velocity_min = 174.65
initial_velocity_max = 275.77
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="ExplodeFX" type="CPUParticles2D" parent="."]
z_index = 10
material = SubResource("CanvasItemMaterial_0pda3")
position = Vector2(79, -2)
emitting = false
lifetime = 0.2
one_shot = true
explosiveness = 0.1
texture = ExtResource("3_uho1d")
direction = Vector2(1, -1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 343.19
initial_velocity_max = 343.19
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_26nth")
autoplay = true
bus = &"Sound_effects"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
